Fixed spacing. #7

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 .correct {
-  color: green;
+  color: #55ce3a;
 }
 
 .incorrect {
@@ -23,7 +23,7 @@ div {
 }
 
 .total-score {
-  color: green;
+  color: #55ce3a;
 }
 
 form {
